2007-04-16  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.16.4.

2007-04-11  Bastien Nocera  <hadess@hadess.net>

	* src/sj-play.c: (setup): Follow the preferred sound device as
	set in the control-center (Closes: #428677)

2007-04-02  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-metadata-musicbrainz.c:
	Detect albums from FreeDB better (thanks David Mandelberg, #353181).

2007-03-26  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Tweak so the path selector combo is accessible (Rich Burridge,
	#406000). (backport r1740)

2007-03-26  Bastien Nocera  <hadess@hadess.net>

	reviewed by: Ross Burton <ross@burtonini.com>

	* libjuicer/sj-util.c: (xdg_user_dir_lookup),
	(sj_get_default_music_directory), (sj_add_default_dirs):
	* libjuicer/sj-util.h:
	* src/sj-main.c: (baseuri_changed_cb), (main):
	* src/sj-prefs.c: (baseuri_changed_cb), (on_edit_preferences_cb):
	* src/sound-juicer.h: Use xdg-user-dirs to set a nice default target
	for encoded files, also add the directory to the list of directories
	listed in the drop-down menu (Closes: #404542)

2007-03-15  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* src/sj-main.c:
	Initialise threading system before calling gst_init_get_option_group()
	(#418717).

2007-03-20  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	When displaying strerror(), convert to UTF-8 first (#419512,
	thanks Pascal Terjan).

2007-03-12  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in.in:
	Remove "Application" category (#417362).

2007-03-04  Ross Burton  <ross@burtonini.com>

	* tests/Makefile.am:
	Link to libjuicer.la instead of the sources directly.  This fixes
	srcdir!=builddir builds, thanks Loic Minier. (#414159).

	* libjuicer/Makefile.am:
	marshal.c depends on marshal.h, and whitespace cleanup (Loic).

2007-01-29  Ross Burton  <ross@burtonini.com>

	* configure.ac:
	* NEWS:
	Version 2.16.3.

2007-01-28  Ross Burton  <ross@burtonini.com>

	* data/Makefile.am: